Get, post, edit and delete operations for the post component

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "personal-blog-generation": {
+    "blog-generation": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/personal-blog-generation",
+            "outputPath": "dist/blog-generation",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -73,10 +73,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "personal-blog-generation:build:production"
+              "browserTarget": "blog-generation:build:production"
             },
             "development": {
-              "browserTarget": "personal-blog-generation:build:development"
+              "browserTarget": "blog-generation:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -84,7 +84,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "personal-blog-generation:build"
+            "browserTarget": "blog-generation:build"
           }
         },
         "test": {
@@ -107,5 +107,5 @@
       }
     }
   },
-  "defaultProject": "personal-blog-generation"
+  "defaultProject": "blog-generation"
 }
